...
                                            </connections>
                                        </menuItem>
                                        <menuItem title="Delete" id="pa3-QI-u2k">
                                            <modifierMask key="keyEquivalentModifierMask"/>
                                            <connections>
...
                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ITH-2M-A3a">
                                <rect key="frame" x="204" y="19" width="42" height="19"/>
                                <buttonCell key="cell" type="roundRect" title="Save" bezelStyle="roundedRect" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="JNQ-e6-FAs">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="cellTitle"/>
...
                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                    <subviews>
                                                        <collectionView identifier="LogView" id="tdI-tY-huH" userLabel="Log View">
                                                            <rect key="frame" x="0.0" y="0.0" width="448" height="433"/>
                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
...
                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                    <subviews>
                                                        <textView identifier="TerminalView" importsGraphics="NO" verticallyResizable="YES" usesFontPanel="YES" findStyle="panel" continuousSpellChecking="YES" allowsUndo="YES" usesRuler="YES" allowsNonContiguousLayout="YES" quoteSubstitution="YES" dashSubstitution="YES" spellingCorrection="YES" smartInsertDelete="YES" id="gHe-ED-165" userLabel="Termi
                                                            <rect key="frame" x="0.0" y="0.0" width="616" height="98"/>
                                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
...
                                                </scroller>
                                            </scrollView>
                                            <textField identifier="TerminalInput" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="JXT-gm-fo4" userLabel="Terminal Input">
                                                <rect key="frame" x="0.0" y="0.0" width="450" height="30"/>
                                                <constraints>
...
                                    <constraint firstAttribute="width" constant="300" id="JK1-9K-Vbg"/>
                                </constraints>
                                <textFieldCell key="cell" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" placeholderString="Why are you submitting these files?" drawsBackground="YES" id="9On-Lw-lv4">
                                    <font key="font" metaFont="system"/>
                                    <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
...
                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="MZn-Cw-08g">
                                <rect key="frame" x="123" y="3" width="88" height="32"/>
                                <buttonCell key="cell" type="push" title="Commit" bezelStyle="rounded" alignment="center" enabled="NO" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Svl-ll-qLI">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
...
                                <rect key="frame" x="42" y="79" width="302" height="34"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" title="Project Name" placeholderString="Project Name" drawsBackground="YES" id="IbT-VP-WDb">
                                    <font key="font" metaFont="system"/>
                                    <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
...
